--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,12 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/BeerSlider.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/BeerSlider.js"
+            ]
           },
           "configurations": {
             "production": {
